--- a/src/components/views/MineralsList/MineralsList.module.scss
+++ b/src/components/views/MineralsList/MineralsList.module.scss
@@ -8,7 +8,7 @@ img {
   width: 300px;
   border: solid 1px $color-dark;
   padding: 1px;
-  height: auto;
+  height: 220px;
   transition: transform .2s;
   &:hover {
     transform: scale(1.1); 
@@ -16,7 +16,7 @@ img {
 }
 
 .photoInside {
-  margin: 24px 60px 24px 90px;
+  margin: 40px 80px 40px 20px;
   transition: box-shadow 0.4s ease-in-out;
   &:hover img {
     box-shadow: 0 0px 10px $color-navyblue; 
@@ -24,13 +24,12 @@ img {
 }
 
 .mineralText {
-  margin: 24px 0 0 48px;
+  margin: 40px 0 0 48px;
 }
 
 .product {
   color: $color-darkblue;
-  margin-left: 560px;
-  font-size: 24px;
+  font-size: 20px;
   display: inline-flex;
   font-family: $font-text;
   &:hover {
@@ -43,21 +42,8 @@ img {
   color: $color-important;
 }
 
-.line {
-  margin-left: -200px;
-  position: absolute;
-  content: "";
-  height: 1px;
-  width: 55%;
-  background-image: linear-gradient(to right, $color-light, $color-dark, $color-light);
-}
-
-.squaresLeftSided {
-  margin-left: 20px;
-}
-
 .squares {
-  top: 0px;
+  top: 0;
   left: 0;
   width: 100%;
   height: 100%;
@@ -94,7 +80,7 @@ img {
   width: 16px;
   height: 16px;
   animation-duration: 23s;
-  background-color: $color-navyblue;
+  background-color: $color-lightblue;
 }
 
 .squares li:nth-child(4) {
@@ -158,7 +144,7 @@ img {
   width: 20px;
   height: 20px;
   animation-duration: 18s;
-  background-color: $color-navyblue;
+  background-color: $color-lightblue;
 }
 
 .squares li:nth-child(12) {
@@ -206,7 +192,7 @@ img {
   width: 26px;
   height: 26px;
   animation-duration: 14.5s;
-  background-color: $color-navyblue;
+  background-color: $color-lightblue;
 }
 
 .squares li:nth-child(18) {
@@ -294,7 +280,7 @@ img {
   width: 22px;
   height: 22px;
   animation-duration: 24s;
-  background-color: $color-navyblue;
+  background-color: $color-lightblue;
 }
 
 .squares li:nth-child(29) {
@@ -337,7 +323,7 @@ img {
   }
 
   100% {
-    transform: translateY(-2848px) rotate(720deg);
+    transform: translateY(-100vh) rotate(720deg);
     opacity: 0.9;
     border-radius: 0;
   }
