--- a/src/styles/settings.scss
+++ b/src/styles/settings.scss
@@ -1,6 +1,6 @@
 $base-size: 12px;
 $font-text: 'Montserrat', sans-serif;
-$font-title: 'Epilogue', sans-serif;
+$font-title: 'Raleway', sans-serif;
 
 $color-dark: rgb(0, 0, 0);
 $color-darkblue: rgb(0, 0, 27);
