RWD for mobile started

--- a/client/src/components/views/Basket/Basket.module.scss
+++ b/client/src/components/views/Basket/Basket.module.scss
@@ -13,9 +13,9 @@
   width: 18%;
   background-image: linear-gradient(
     to right,
-    $color-light,
+    $color-lightblue,
     $color-dark,
-    $color-light
+    $color-lightblue
   );
 }
 
@@ -130,3 +130,6 @@
     font-weight: bold;
   }
 }
+
+
+//////////////////////////////////////////////////////////////////////////////////////////// Media query 
