--- a/client/src/styles/settings.scss
+++ b/client/src/styles/settings.scss
@@ -6,7 +6,8 @@ $color-dark: rgb(0, 0, 0);
 $color-darkblue: rgb(0, 0, 27);
 $color-navyblue: rgb(0, 0, 82);
 $color-blue: #443ad4;
-$color-lightblue: #e6ebff;
+$color-lighterblue: #6c7dc4;
+$color-lightblue: #c2cbee;
 $color-light: rgb(255, 255, 255);
 $color-lightgrey: rgb(233, 233, 233);
 $color-important:  rgb(158, 25, 158);
