--- a/client/src/components/layout/Header/Header.module.scss
+++ b/client/src/components/layout/Header/Header.module.scss
@@ -68,12 +68,17 @@
   );
 }
 
-// @media (max-width: 767px) {
-//   //sm
-//   .allLinks {
-//     font-size: 16px;
-//   }
-// }
+//////////////////////////////////////////////////////////////////////////////////////////// Media query 
+
+@media (max-width: 767px) {
+  //sm
+  .allLinks {
+    font-size: 16px;    
+  }
+  .links {
+    padding: 0 12px;
+  }
+}
 
 // @media (max-width: 411px) {
 //   // pixel 2 xl
