--- a/client/src/components/views/MineralsList/MineralsList.module.scss
+++ b/client/src/components/views/MineralsList/MineralsList.module.scss
@@ -1,14 +1,17 @@
 @import "../../../styles/settings.scss";
 
-.productDescription {
-  display: inline-flex;
+.exploreMinerals {
+  color: $color-navyblue;
+  font-size: 40px;
+  padding: 60px 0 120px 48px;
 }
 
 img {
-  width: 300px;
+  width: 220px;
   border: solid 1px $color-dark;
   padding: 1px;
-  height: 220px;
+  height: 200px;
+  object-fit: cover;
   transition: transform .2s;
   &:hover {
     transform: scale(1.1); 
@@ -16,7 +19,7 @@ img {
 }
 
 .photoInside {
-  margin: 40px 80px 40px 20px;
+  margin: 0 48px 20px 48px;
   transition: box-shadow 0.4s ease-in-out;
   &:hover img {
     box-shadow: 0 0px 10px $color-navyblue; 
@@ -24,21 +27,26 @@ img {
 }
 
 .mineralText {
-  margin: 40px 0 0 48px;
+  margin: 12px 0 0 48px;  
 }
 
-.product {
-  color: $color-darkblue;
-  font-size: 20px;
+.allProducts {
   display: inline-flex;
+}
+
+.product {  
+  color: $color-darkblue;
+  font-size: 16px;
+  display: block;
   font-family: $font-text;
+  margin-bottom: 128px;
   &:hover {
     text-decoration: none;
     color: $color-darkblue;
   }
 }
 
-.mineralNameContent, .mineralPriceContent {
+.mineralPriceContent {
   color: $color-important;
 }
 
@@ -61,258 +69,194 @@ img {
 
 .squares li:nth-child(1) {
   left: 7%;
-  width: 30px;
-  height: 30px;
   animation-duration: 15s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(2) {
   left: 8%;
-  width: 20px;
-  height: 20px;
   animation-duration: 19s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(3) {
   left: 9%;
-  width: 16px;
-  height: 16px;
   animation-duration: 23s;
-  background-color: $color-lightblue;
+  color: $color-lightblue;
 }
 
 .squares li:nth-child(4) {
   left: 10%;
-  width: 32px;
-  height: 32px;
   animation-duration: 27s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(5) {
   left: 11%;
-  width: 22px;
-  height: 22px;
   animation-duration: 31s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(6) {
   left: 12%;
-  width: 14px;
-  height: 14px;
   animation-duration: 17s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 .squares li:nth-child(7) {
   left: 13%;
-  width: 26px;
-  height: 26px;
   animation-duration: 21s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(8) {
   left: 14%;
-  width: 24px;
-  height: 24px;
   animation-duration: 25s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(9) {
   left: 15%;
-  width: 15px;
-  height: 15px;
   animation-duration: 26s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 .squares li:nth-child(10) {
   left: 16%;
-  width: 20px;
-  height: 20px;
   animation-duration: 16s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(11) {
   left: 17%;
-  width: 20px;
-  height: 20px;
   animation-duration: 18s;
-  background-color: $color-lightblue;
+  color: $color-lightblue;
 }
 
 .squares li:nth-child(12) {
   left: 18%;
-  width: 26px;
-  height: 26px;
   animation-duration: 22s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(13) {
   left: 19%;
-  width: 26px;
-  height: 26px;
   animation-duration: 26s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(14) {
   left: 20%;
-  width: 16px;
-  height: 16px;
   animation-duration: 24s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(15) {
   left: 21%;
-  width: 12px;
-  height: 12px;
   animation-duration: 20s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(16) {
   left: 22%;
-  width: 10px;
-  height: 10px;
   animation-duration: 13.5s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 .squares li:nth-child(17) {
   left: 77%;
-  width: 26px;
-  height: 26px;
   animation-duration: 14.5s;
-  background-color: $color-lightblue;
+  color: $color-lightblue;
 }
 
 .squares li:nth-child(18) {
   left: 78%;
-  width: 20px;
-  height: 20px;
   animation-duration: 21s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(19) {
   left: 79%;
-  width: 16px;
-  height: 16px;
   animation-duration: 20s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(20) {
   left: 80%;
-  width: 20px;
-  height: 20px;
   animation-duration: 15s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(21) {
   left: 81%;
-  width: 30px;
-  height: 30px;
   animation-duration: 18s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(22) {
   left: 82%;
-  width: 24px;
-  height: 24px;
   animation-duration: 21s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(23) {
   left: 83%;
-  width: 20px;
-  height: 20px;
   animation-duration: 26s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(24) {
   left: 84%;
-  width: 12px;
-  height: 12px;
   animation-duration: 22s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(25) {
   left: 85%;
-  width: 15px;
-  height: 15px;
   animation-duration: 23s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 .squares li:nth-child(26) {
   left: 86%;
-  width: 26px;
-  height: 26px;
   animation-duration: 19s;
-  background-color: $color-blue;
+  color: $color-blue;
 }
 
 .squares li:nth-child(27) {
   left: 87%;
-  width: 16px;
-  height: 16px;
   animation-duration: 20s;
-  background-color: $color-navyblue;
+  color: $color-lighterblue;
 }
 
 .squares li:nth-child(28) {
   left: 88%;
-  width: 22px;
-  height: 22px;
   animation-duration: 24s;
-  background-color: $color-lightblue;
+  color: $color-lightblue;
 }
 
 .squares li:nth-child(29) {
   left: 89%;
-  width: 32px;
-  height: 32px;
   animation-duration: 27s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(30) {
   left: 90%;
-  width: 26px;
-  height: 26px;
   animation-duration: 22s;
-  background-color: $color-important;
+  color: $color-important;
 }
 
 .squares li:nth-child(31) {
   left: 91%;
-  width: 10px;
-  height: 10px;
   animation-duration: 17s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 .squares li:nth-child(32) {
   left: 92%;
-  width: 14px;
-  height: 14px;
   animation-duration: 14s;
-  background-color: $color-importantDark;
+  color: $color-importantDark;
 }
 
 @keyframes animate {
@@ -327,4 +271,80 @@ img {
     opacity: 0.9;
     border-radius: 0;
   }
+}
+
+//////////////////////////////////////////////////////////////////////////////////////////// Media query 
+
+@media (max-width: 767px) {
+  //sm
+  .squares li {
+    font-size: 12px;
+  }
+
+  .exploreMinerals {
+    color: $color-navyblue;
+    text-align: center;
+    font-size: 24px;
+    padding: 20px 0 60px 0;
+  }
+
+  img {
+    width: 140px;
+    border: solid 1px $color-dark;
+    padding: 1px;
+    height: 130px;
+    object-fit: cover;
+    transition: transform .2s;
+    &:hover {
+      transform: scale(1.1); 
+    }
+  }
+  
+  .photoInside {
+    margin: 0 8px 40px 48px;
+    transition: box-shadow 0.4s ease-in-out;
+    &:hover img {
+      box-shadow: 0 0px 10px $color-navyblue; 
+    }
+  }
+  
+  .mineralText {
+    margin: 12px 0 0 8px;  
+  }
+  
+  .allProducts {
+    display: block;
+  }
+  
+  .product {  
+    color: $color-darkblue;
+    font-size: 16px;
+    display: inline-flex;
+    font-family: $font-text;
+    margin-bottom: 28px;
+    &:hover {
+      text-decoration: none;
+      color: $color-darkblue;
+    }
+  }
+}
+
+@media (max-width: 411px) {
+  // pixel 2 xl
+}
+
+@media (max-width: 568px) {
+  // sm poziom
+}
+
+@media (max-width: 768px) {
+  //iPad
+}
+
+@media (max-width: 992px) {
+  //lg
+}
+
+@media (max-width: 1200px) {
+  //xl
 }
