--- a/client/src/components/views/MyOrder/MyOrder.module.scss
+++ b/client/src/components/views/MyOrder/MyOrder.module.scss
@@ -13,9 +13,9 @@
   width: 18%;
   background-image: linear-gradient(
     to right,
-    $color-light,
+    $color-lightblue,
     $color-dark,
-    $color-light
+    $color-lightblue
   );
 }
 
@@ -129,3 +129,5 @@ input {
     font-weight: bold;
   }
 }
+
+//////////////////////////////////////////////////////////////////////////////////////////// Media query 
