--- a/client/src/components/views/NotFound/NotFound.module.scss
+++ b/client/src/components/views/NotFound/NotFound.module.scss
@@ -37,3 +37,5 @@
       color: $color-light;
     }
   }
+
+  //////////////////////////////////////////////////////////////////////////////////////////// Media query 
