--- a/client/src/components/views/MineralsList/MineralsList.module.scss
+++ b/client/src/components/views/MineralsList/MineralsList.module.scss
@@ -3,18 +3,18 @@
 .exploreMinerals {
   color: $color-navyblue;
   font-size: 40px;
-  padding: 60px 0 120px 48px;
+  padding: 60px 0 120px 84px;
 }
 
 img {
-  width: 220px;
+  width: 330px;
   border: solid 1px $color-dark;
   padding: 1px;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
-  transition: transform .2s;
+  transition: transform 0.2s;
   &:hover {
-    transform: scale(1.1); 
+    transform: scale(1.1);
   }
 }
 
@@ -22,28 +22,50 @@ img {
   margin: 0 48px 20px 48px;
   transition: box-shadow 0.4s ease-in-out;
   &:hover img {
-    box-shadow: 0 0px 10px $color-navyblue; 
+    box-shadow: 0 0px 10px $color-navyblue;
   }
 }
 
 .mineralText {
-  margin: 12px 0 0 48px;  
+  margin: 12px 0 0 48px;
 }
 
-.allProducts {
+.empty {
+  height: 120px;
+}
+
+.allMinerals {
   display: inline-flex;
 }
 
-.product {  
+.allProductsToChoose {
+  display: inline-flex;
+}
+
+.allProducts {
+  display: block;
+}
+
+.product {
   color: $color-darkblue;
   font-size: 16px;
   display: block;
   font-family: $font-text;
-  margin-bottom: 128px;
+  margin-left: 40px;
+  margin-bottom: 48px;
   &:hover {
     text-decoration: none;
     color: $color-darkblue;
   }
+}
+
+.photoInsideMaterial img {
+  width: 200px;
+  border: solid 1px $color-dark;
+  padding: 1px;
+  height: 200px;
+  object-fit: cover;
+  margin: 0 0 20px 48px;
 }
 
 .mineralPriceContent {
@@ -273,7 +295,7 @@ img {
   }
 }
 
-//////////////////////////////////////////////////////////////////////////////////////////// Media query 
+//////////////////////////////////////////////////////////////////////////////////////////// Media query
 
 @media (max-width: 767px) {
   //sm
@@ -294,29 +316,29 @@ img {
     padding: 1px;
     height: 130px;
     object-fit: cover;
-    transition: transform .2s;
+    transition: transform 0.2s;
     &:hover {
-      transform: scale(1.1); 
+      transform: scale(1.1);
     }
   }
-  
+
   .photoInside {
     margin: 0 8px 40px 48px;
     transition: box-shadow 0.4s ease-in-out;
     &:hover img {
-      box-shadow: 0 0px 10px $color-navyblue; 
+      box-shadow: 0 0px 10px $color-navyblue;
     }
   }
-  
+
   .mineralText {
-    margin: 12px 0 0 8px;  
+    margin: 12px 0 0 8px;
   }
-  
+
   .allProducts {
     display: block;
   }
-  
-  .product {  
+
+  .product {
     color: $color-darkblue;
     font-size: 16px;
     display: inline-flex;
