--- a/client/src/components/views/Homepage/Homepage.module.scss
+++ b/client/src/components/views/Homepage/Homepage.module.scss
@@ -47,6 +47,26 @@
   font-family: $font-text;
   font-size: 28px;
   letter-spacing: 16px;
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    bottom: 0;
+    left: 25%;
+    background-color: $color-light;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+    transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+    }
+    &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    }
 }
 
 .posts {
