--- a/client/src/components/layout/Footer/Footer.module.scss
+++ b/client/src/components/layout/Footer/Footer.module.scss
@@ -1,11 +1,11 @@
 @import "../../../styles/settings.scss";
 
 .root {
-max-width: 100%;
-height: 16vh;
-background: $color-lightblue;
-overflow: hidden;
-position: relative;
+  max-width: 100%;
+  height: 16vh;
+  background: $color-lightblue;
+  overflow: hidden;
+  position: relative;
 }
 
 .allLinks {
@@ -21,24 +21,43 @@ position: relative;
   color: $color-navyblue;
   padding: 0 24px 0 24px;
   font-family: $font-text;
-  transition: text-shadow 0.3s ease-in-out;
-    &:hover {
-      color: $color-navyblue;
-      text-decoration: none;
-      text-shadow: $color-lightblue 0 0 40px, $color-navyblue 0 0 80px, $color-navyblue 0 0 20px;
-    }
+  &:hover {
+    text-decoration: none;
+    color: $color-navyblue;
+  }
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 90%;
+    height: 2px;
+    bottom: 0;
+    left: 5%;
+    background-color: $color-navyblue;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+    transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+  }
+  &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
 }
 
-//////////////////////////////////////////////////////////////////////////////////////////// Media query 
+//////////////////////////////////////////////////////////////////////////////////////////// Media query
 
-@media (max-width: 767px) { //sm
+@media (max-width: 767px) {
+  //sm
   .allLinks {
     font-size: 20px;
     position: absolute;
-  top: 50%;
-  left: 25%;
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
+    top: 50%;
+    left: 25%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
   }
 
   .waveEffectDiv {
@@ -71,16 +90,13 @@ position: relative;
 // }
 
 // @media (max-width: 768px) {   //iPad
- 
-  
+
 // }
 
 // @media (max-width: 992px) { //lg
-  
-  
+
 // }
 
 // @media (max-width: 1200px) { //xl
-  
-  
+
 // }
