--- a/client/src/components/views/MineralPost/MineralPost.module.scss
+++ b/client/src/components/views/MineralPost/MineralPost.module.scss
@@ -8,7 +8,7 @@
 .background {
   background: $color-lightblue;
   width: 100%;
-  height: 190vh;
+  height: 132vh;
 }
 
 .postDetail {
@@ -21,24 +21,45 @@
 }
 
 .detailTitle {
-  font-size: 44px;
+  font-size: 60px;
   color: $color-important;
   text-align: center;
-  padding: 160px 0 72px 0;
+  padding-top: 120px;
+  margin: 0 0 80px 0;
   &:hover {
     color: $color-navyblue;
+  }
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    bottom: 0;
+    left: 25%;
+    background-color: $color-navyblue;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+    transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+  }
+  &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
   }
 }
 
 .detailText {
-  font-size: 18px;
+  font-size: 24px;
   color: $color-navyblue;
   text-align: center;
-  padding: 0 48px 120px 72px;
+  padding: 0 48px 80px 72px;
 }
 
 .photoDescription {
-  font-size: 32px;
+  font-size: 40px;
   color: $color-navyblue;
   text-align: center;
   padding: 0 0 60px 0;
@@ -49,10 +70,9 @@
 }
 
 .photoDescription2 {
-  font-size: 32px;
   color: $color-navyblue;
   text-align: center;
-  padding: 120px 0 60px 0;
+  padding: 180px 0 60px 0;
   letter-spacing: 6px;
   &:hover {
     color: $color-important;
@@ -62,11 +82,11 @@
 .detailPhoto {
   display: inline-flex;
   left: 0%;
-  transform: translate(21%);
   color: $color-navyblue;
   img {
-    margin: 0 120px;
-    width: 200px;
+    margin: 0 116px;
+    width: 400px;
+    height: 400px;
     object-fit: cover;
     &:hover {
       transform: scale(1.2);
@@ -144,13 +164,13 @@
   border: solid 1px $color-navyblue;
 }
 
-.basketContainer {
+.homepageContainer {
   position: relative;
   height: 140px;
 }
 
-.goToBasket {
-  margin-top: 60px;
+.backToHomepage {
+  margin-top: 148px;
   position: absolute; 
   top: 50%; 
   left: 50%; 
@@ -190,10 +210,10 @@
 
 .squares {
   position: absolute;
-  top: 80px;
+  top: 112px;
   left: 0;
   width: 100%;
-  height: 192%;
+  height: 132%;
   overflow: hidden;
 }
 
@@ -354,12 +374,12 @@
     border: solid 1px $color-navyblue;
   }
   
-  .basketContainer {
+  .homepageContainer {
     position: relative;
     height: 140px;
   }
   
-  .goToBasket {
+  .backToHomepage {
     margin-top: 60px;
     position: absolute; 
     top: 50%; 
