--- a/client/src/components/views/Mineral/Mineral.module.scss
+++ b/client/src/components/views/Mineral/Mineral.module.scss
@@ -169,6 +169,7 @@
 .squares li:nth-child(1) {
   left: 25%;
   font-size: 80px;
+  color: $color-importantDark;
   animation-delay: 0s;
 }
 
@@ -182,6 +183,7 @@
 .squares li:nth-child(3) {
   left: 70%;
   font-size: 20px;
+  color: $color-importantDark;
   animation-delay: 4s;
 }
 
@@ -195,6 +197,7 @@
 .squares li:nth-child(5) {
   left: 65%;
   font-size: 20px;
+  color: $color-important;
   animation-delay: 0s;
 }
 
@@ -207,6 +210,7 @@
 .squares li:nth-child(7) {
   left: 35%;
   font-size: 70px;
+  color: $color-importantDark;
   animation-delay: 7s;
 }
 
@@ -227,6 +231,7 @@
 .squares li:nth-child(10) {
   left: 85%;
   font-size: 80px;
+  color: $color-important;
   animation-delay: 0s;
   animation-duration: 11s;
 }
