--- a/client/src/components/views/Basket/Basket.module.scss
+++ b/client/src/components/views/Basket/Basket.module.scss
@@ -28,13 +28,34 @@
 .cartContentTitle {
   font-size: 60px;
   color: $color-importantDark;
-  padding: 20px 0 60px 36px;
+  padding: 20px 0 20px 36px;
+  margin-bottom: 60px;
   &:hover {
     color: $color-navyblue;
   }
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 50%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $color-navyblue;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+    transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
+    }
+    &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+    }
 }
 
-.chosenItems {
+.orderedItems {
   min-width: 400px;
 }
 
