--- a/client/src/components/views/Product/Product.module.scss
+++ b/client/src/components/views/Product/Product.module.scss
@@ -81,7 +81,7 @@
 }
 
 .plusAndMinus {
-  font-size: 16px;
+  font-size: 20px;
   display: inline-flex;
   padding: 12px 0 0 0;
   margin-bottom: 12px;
@@ -92,8 +92,8 @@
   margin: 0 8px;
   color: $color-light;
   background-color: $color-navyblue;
-  height: 24px;
-  width: 24px;
+  height: 44px;
+  width: 44px;
   border-radius: 15%;
   &:hover {
     box-shadow: 0 0px 10px $color-navyblue;
@@ -130,8 +130,9 @@
   margin: 0 8px;
   color: $color-navyblue;
   background-color: $color-light;
-  height: 64px;
-  width: 64px;
+  font-size: 24px;
+  height: 44px;
+  width: 44px;
   border: solid 1px $color-navyblue;
 }
 
@@ -172,7 +173,7 @@ input::-webkit-inner-spin-button {
   top: 0;
   left: 0;
   width: 100%;
-  height: 120%;
+  //height: 200%;
   overflow: hidden;
 }
 
@@ -379,7 +380,7 @@ input::-webkit-inner-spin-button {
 
 @keyframes animate {
   0% {
-    transform: translateY(0) rotate(0deg);
+    transform: translateY(60vh) rotate(0deg);
     opacity: 1;
     border-radius: 0;
   }
