--- a/client/src/components/views/MyOrder/MyOrder.module.scss
+++ b/client/src/components/views/MyOrder/MyOrder.module.scss
@@ -45,14 +45,64 @@
     visibility: hidden;
     -webkit-transform: scaleX(0);
     transform: scaleX(0);
-    -webkit-transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
-    transition: all .5s cubic-bezier(1,.25,0,.75) 0s;
-    }
-    &:hover:before {
+    -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+    transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+  }
+  &:hover:before {
     visibility: visible;
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
-    }
+  }
+  background: linear-gradient(
+    90deg,
+    $color-lightblue,
+    $color-navyblue,
+    $color-lightblue
+  );
+  background-repeat: no-repeat;
+  background-size: 80%;
+  animation: animate 5s linear infinite;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: rgba(255, 255, 255, 0);
+}
+
+@keyframes animate {
+  0% {
+    background-position: -500%;
+  }
+  100% {
+    background-position: 500%;
+  }
+}
+
+.yourContactData {
+  font-size: 60px;
+  color: $color-importantDark;
+  padding: 20px 0 20px 36px;
+  margin-bottom: 60px;
+  &:hover {
+    color: $color-navyblue;
+  }
+  position: relative;
+  &:before {
+    content: "";
+    position: absolute;
+    width: 40%;
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: $color-navyblue;
+    visibility: hidden;
+    -webkit-transform: scaleX(0);
+    transform: scaleX(0);
+    -webkit-transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+    transition: all 0.5s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+  }
+  &:hover:before {
+    visibility: visible;
+    -webkit-transform: scaleX(1);
+    transform: scaleX(1);
+  }
 }
 
 .orderedItems {
@@ -143,7 +193,7 @@ input {
   border: solid 1px black;
   font-size: 32px;
   position: relative;
-    &:hover {
+  &:hover {
     text-decoration: none;
     color: $color-light;
     box-shadow: 0 0px 20px $color-navyblue;
@@ -151,4 +201,4 @@ input {
   }
 }
 
-//////////////////////////////////////////////////////////////////////////////////////////// Media query 
+//////////////////////////////////////////////////////////////////////////////////////////// Media query
